[gd_scene load_steps=8 format=3 uid="uid://main001"]

[ext_resource type="Script" path="res://scripts/core/main.gd" id="0_main"]
[ext_resource type="PackedScene" path="res://scenes/arena/Arena_01.tscn" id="1_arena"]
[ext_resource type="PackedScene" path="res://scenes/player/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://scenes/boss/Boss_01.tscn" id="3_boss"]
[ext_resource type="PackedScene" path="res://scenes/camera/CombatCameraRig.tscn" id="4_cam"]
[ext_resource type="PackedScene" path="res://scenes/ui/CombatHUD.tscn" id="5_hud"]
[ext_resource type="Script" path="res://scripts/combat/telegraph_controller.gd" id="6_telegraph"]

[node name="Main" type="Node3D"]
script = ExtResource("0_main")

[node name="Arena01" parent="." instance=ExtResource("1_arena")]

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector3(-4.0, 0.0, 0.0)

[node name="Boss01" parent="." instance=ExtResource("3_boss")]
position = Vector3(4.0, 0.0, 0.0)

[node name="CombatCameraRig" parent="." instance=ExtResource("4_cam")]
position = Vector3(0.0, 0.0, 0.0)

[node name="CombatHUD" parent="." instance=ExtResource("5_hud")]

[node name="TelegraphController" type="Node" parent="."]
script = ExtResource("6_telegraph")
